walk service rewrite